# manywells

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: calibration.md  corrigendum.md  datasets.md  energy_modeling.md  installation.md  ml_examples.md  simulate.md  testing.md  thermal_energy_modeling.md
manywells/: ca_functions.py  constants.py  inflow.py  pvt.py  simulator.py  slip.py
manywells/calibration/: choke_cal.py  inflow_cal.py
manywells/closed_loop/: __init__.py  cl_simulator.py
scripts/: benchmark_cellwise.py  black_oil_tutorial.py  load_dataset.py  load_well_from_dataset.py  plot_well_geometry.py  plt_config.py  sim_l_shaped_well.py
scripts/data_generation/: file_utils.py  init_utils.py  noise_models.py  nonstationary_well.py  read_dump.py  read_dump_nonstationary.py  well.py
scripts/data_generation/closed_loop_nonstationary/: generate_closed_loop_nonstationary_well_data.py
scripts/data_generation/loaded_wells/: generate_data_loaded_wells.py
scripts/data_generation/open_loop_nonstationary/: generate_open_loop_nonstationary_well_data.py
scripts/data_generation/open_loop_stationary/: generate_well_data.py
scripts/flow_regimes/: fit_flow_regime_classifier.py  plot_flow_regime_map.py
scripts/ml_examples/: base_model.py  classification.py  data_loader.py  noise.py  regression.py  utils.py
scripts/sim_examples/: L_shaped_well.py  vertical_well.py
src/manywells/: choke.py  friction.py  geometry.py  inflow.py  pvt.py  simulator.py  slip.py  units.py
src/manywells/calibration/: inflow_cal.py
src/manywells/closed_loop/: cl_simulator.py
tests/: __init__.py  test_black_oil.py  test_ca_functions.py  test_calibration.py  test_choke.py  test_fluid.py  test_friction.py  test_inflow.py  test_pvt.py  test_simulator.py  test_slip.py
(+12 files in other folders)
