[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manywells"
version = "0.1.0"
description = "ManyWells: simulation of multiphase flow in vertical oil and gas wells"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24",
    "pandas==1.5.3",
    "matplotlib==3.7.2",
    "seaborn==0.13.2",
    "scikit-learn==1.3.0",
    "casadi==3.6.4",
]
authors = [
  {name = "Bjarne Grimstad"},
  {name = "Erlend Lundby"},
]
maintainers = [
  {name = "Bjarne Grimstad", email = "bjarne.grimstad@solutionseeker.no"},
]

[project.urls]
Repository = "https://github.com/solution-seeker-as/manywells.git"
